--- a/css/style.css
+++ b/css/style.css
@@ -65,27 +65,6 @@ ul li {
   color: #fff;
   background: #116e32;
 }
-/* LIGHT THEME */
-#myBody {
-  background-color: white;
-}
-#switchToggle .gg-sun {
-  display: none;
-}
-#switchToggle .gg-moon {
-  display: block;
-}
-/* DARK THEME */
-.dark#myBody {
-  background-color: black;
-}
-.dark #switchToggle .gg-moon {
-  display: none;
-}
-.dark #switchToggle .gg-sun {
-  display: block;
-  color: white;
-}
 
 /* HEADER */
 header {
@@ -102,14 +81,28 @@ header.nav-fixed {
   font-size: 34px;
   font-weight: 600;
   color: #189a46;
-}
-.navbar-brand {
   display: inline-block;
   line-height: inherit;
   white-space: nowrap;
 }
-li a.search-search {
+a.nav-link::before {
+  content: " ";
+  position: absolute;
+  width: 0;
   background: #189a46;
+  height: 1px;
+  bottom: 14px;
+  transition: all 0.5s;
+}
+a.nav-link:hover::before {
+  width: 80%;
+}
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+  color: #189a46;
+}
+li a.search-search {
+  background: rgba(147, 107, 232, 0.05);
+  color: #189a46;
   font-size: 1rem;
   width: 45px;
   height: 45px;
@@ -117,7 +110,15 @@ li a.search-search {
   border-radius: 45px;
   display: inline-block;
   text-align: center;
-  color: white;
+  border: none;
+  transition: all 0.5s;
+}
+li a.search-search:hover {
+  background: #189a46;
+  color: #fff;
+}
+li.nav-item {
+  padding: 0 12px;
 }
 .theme-switch-wrapper {
   display: flex;
@@ -138,10 +139,6 @@ li a.search-search {
   width: 60px;
   position: relative;
   margin: 0;
-}
-.theme-switch input {
-  display: none;
-  overflow: visible;
 }
 .mode-container {
   width: 24px;
@@ -216,6 +213,36 @@ li a.search-search {
   left: 2px;
   border-radius: 50%;
 }
+/* LIGHT THEME */
+#myBody {
+  background-color: white;
+}
+#switchToggle .gg-sun {
+  display: none;
+}
+#switchToggle .gg-moon {
+  display: block;
+}
+/* DARK THEME */
+.dark#myBody {
+  background-color: black;
+}
+.dark #switchToggle .gg-moon {
+  display: none;
+}
+.dark #switchToggle .gg-sun {
+  display: block;
+  color: white;
+}
+.dark .nav-fixed {
+  background: black;
+}
+.dark h3.nd__title{
+  color: #ddd;
+}
+.dark p.my__title{
+  color: #afafaf;
+}
 /* BANNER */
 #carouselPoochCaptions .carousel-caption {
   transform: translate(5%, -40%);
@@ -259,14 +286,16 @@ li a.search-search {
   background: #fff;
   height: 10px;
   width: 10px;
-  margin: 0 4px;
+  margin: 1px 8px;
   border-top: 0;
   border-bottom: 0;
 }
-.carousel-indicators .active {
+.carousel-indicators .active,
+.carousel-indicators li:hover {
   background: #189a46;
   width: 30px;
   border-radius: 25px;
+  opacity: 1;
 }
 .btn-white {
   background: #fff;
@@ -460,6 +489,9 @@ li a.search-search {
 .stand__body .package__top {
   text-align: center;
 }
+.stand__body {
+  background: rgba(147, 107, 232, 0.05);
+}
 .stand__body .package__top h5 {
   font-size: 15px;
   font-weight: 700;
@@ -516,17 +548,6 @@ li a.search-search {
 .video__img a.play__view {
   color: #189a46;
 }
-div#vimeo__video iframe {
-  width: 100%;
-  height: 400px;
-  display: block;
-}
-#vimeo__video {
-  max-width: 750px;
-  margin: 40px auto;
-  position: relative;
-  display: none;
-}
 .video__img span.video__icon {
   background: #fff;
   display: inline-block;
@@ -537,6 +558,62 @@ div#vimeo__video iframe {
   transition: all 0.3s;
   animation: ripple 1s linear infinite;
 }
+#my-popup {
+  max-width: 750px;
+  margin: 40px auto;
+  position: relative;
+}
+div#my-popup iframe {
+  width: 100%;
+  height: 400px;
+  display: block;
+  border-radius: 10px;
+}
+.mfp-close-btn-in .mfp-close {
+  color: #fff;
+}
+.mfp-close,
+.mfp-close:active {
+  top: -40px;
+}
+/**
+   * Fade-zoom animation for first dialog
+   */
+/* start state */
+.my-mfp-zoom-in .zoom-anim-dialog {
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+  transform: scale(0.8);
+}
+
+/* animate in */
+.my-mfp-zoom-in.mfp-ready .zoom-anim-dialog {
+  opacity: 1;
+  transform: scale(1);
+}
+
+/* animate out */
+.my-mfp-zoom-in.mfp-removing .zoom-anim-dialog {
+  transform: scale(0.8);
+  opacity: 0;
+}
+
+/* Dark overlay, start state */
+.my-mfp-zoom-in.mfp-bg {
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
+
+/* animate in */
+.my-mfp-zoom-in.mfp-ready.mfp-bg {
+  opacity: 0.95;
+}
+
+/* animate out */
+.my-mfp-zoom-in.mfp-removing.mfp-bg {
+  opacity: 0;
+}
+
 /* TESTIMONALS */
 .test {
   background: rgba(147, 107, 232, 0.05);
@@ -594,26 +671,12 @@ p.indentity {
 .align-self {
   align-self: center;
 }
-/* .test .test__text img{
-  width: 100%;
-  object-fit: cover;
-  object-position: center;
-  min-height: 100%;
-} */
 .test .test__img {
   width: 70px;
   height: 70px;
   border-radius: 50%;
   overflow: hidden;
 }
-/* .test .test__stage__outer, .test__stage{
-  overflow: hidden;
-} */
-/* .test__stage{
-  transform: translate3d(0px, 0px, 0px);
-  transition: all 0s;
-  position: relative;
-} */
 .test .test__item {
   width: 515px;
   margin-right: 20px;
@@ -629,17 +692,24 @@ p.indentity {
   left: 0;
   right: 0;
 }
-.slick-dots li button:before {
+.slick-dots li {
+  margin: 0 13px;
+}
+.slick-dots li button::before {
   font-size: 10px;
 }
-.slick-dots li.slick-active button:before {
+.slick-dots li.slick-active button::before {
   opacity: 0;
 }
-.slick-dots li.slick-active button {
+.slick-dots li.slick-active button,
+.slick-dots li button:hover {
   background: #189a46;
   width: 30px;
   height: 10px;
   border-radius: 25px;
+}
+.slick-dots li button:hover::before {
+  color: transparent;
 }
 .slick-list {
   padding-right: -20px;
@@ -665,6 +735,21 @@ p.indentity {
 .form__pooch .button__style {
   padding: 15px 35px;
 }
+/* FORM POOCH RESPONSIVE */
+@media only screen and (max-width: 667px){
+  .form__pooch .subscribe__form .btn {
+    flex-basis: 100%;
+    display: block;
+    width: 100%;
+    margin-top: 16px;
+}
+.nd__title{
+  font-size: 32px;
+  line-height: 38px;
+  color: #ddd;
+}
+}
+
 /* FOOTER */
 .footer {
   background: #111;
@@ -717,6 +802,13 @@ p.indentity {
   background: #111;
   border-top: 1px solid rgba(103, 99, 99, 0.14);
 }
+/* FOOTER RESPONSIVE */
+@media screen and (max-width: 600px) {
+  .footer__pooch .footer__top {
+    grid-gap: 20px;
+  }
+}
+
 /* BACK TO TOP  */
 .backToTop {
   position: fixed;
