--- a/css/style.css
+++ b/css/style.css
@@ -65,90 +65,6 @@ ul li {
   color: #fff;
   background: #116e32;
 }
-
-/* HEADER */
-header {
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-}
-header.nav-fixed {
-  background: #fff;
-  height: 80px;
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.05);
-}
-.navbar .navbar-brand {
-  font-size: 34px;
-  font-weight: 600;
-  color: #189a46;
-  display: inline-block;
-  line-height: inherit;
-  white-space: nowrap;
-}
-a.nav-link::before {
-  content: " ";
-  position: absolute;
-  width: 0;
-  background: #189a46;
-  height: 1px;
-  bottom: 14px;
-  transition: all 0.5s;
-}
-a.nav-link:hover::before {
-  width: 80%;
-}
-.navbar-expand-lg .navbar-nav .nav-link:hover {
-  color: #189a46;
-}
-li a.search-search {
-  background: rgba(147, 107, 232, 0.05);
-  color: #189a46;
-  font-size: 1rem;
-  width: 45px;
-  height: 45px;
-  line-height: 34px;
-  border-radius: 45px;
-  display: inline-block;
-  text-align: center;
-  border: none;
-  transition: all 0.5s;
-}
-li a.search-search:hover {
-  background: #189a46;
-  color: #fff;
-}
-li.nav-item {
-  padding: 0 12px;
-}
-.theme-switch-wrapper {
-  display: flex;
-  align-items: center;
-}
-.navbar-expand-lg .navbar-nav .nav-item.active .nav-link {
-  color: #189a46;
-}
-.navbar-expand-lg .navbar-nav .nav-link {
-  font-size: 1.2em;
-  font-weight: 400;
-  color: #000c04;
-  position: relative;
-  transition: all 0.5s;
-}
-.theme-switch {
-  display: inline-block;
-  width: 60px;
-  position: relative;
-  margin: 0;
-}
-.mode-container {
-  width: 24px;
-  height: 24px;
-  padding: 3px 0;
-  margin-left: 20px;
-}
-.mode-container i.gg-sun {
-  display: none;
-}
 /* SUN TOGGLE */
 .gg-sun {
   display: block;
@@ -237,12 +153,161 @@ li.nav-item {
 .dark .nav-fixed {
   background: black;
 }
-.dark h3.nd__title{
+.dark h3.nd__title {
   color: #ddd;
 }
-.dark p.my__title{
+.dark p.my__title {
   color: #afafaf;
 }
+.dark .offer__text ul li span.fa {
+  background: #222;
+}
+.dark .offer__text ul li {
+  color: #ddd;
+}
+.dark #service {
+  background: #222;
+}
+/* responsive */
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+@media (min-width: 1478px) {
+  .container {
+    padding-right: 25px;
+    padding-left: 25px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+/* HEADER */
+header {
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+}
+header.nav-fixed {
+  background: #fff;
+  height: 80px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.05);
+}
+.navbar .navbar-brand {
+  font-size: 34px;
+  font-weight: 600;
+  color: #189a46;
+  display: inline-block;
+  line-height: inherit;
+  white-space: nowrap;
+}
+a.nav-link::before {
+  content: " ";
+  position: absolute;
+  width: 0;
+  background: #189a46;
+  height: 1px;
+  bottom: 14px;
+  transition: all 0.5s;
+}
+a.nav-link:hover::before {
+  width: 80%;
+}
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+  color: #189a46;
+}
+li a.search-search {
+  background: rgba(147, 107, 232, 0.05);
+  color: #189a46;
+  font-size: 1rem;
+  width: 45px;
+  height: 45px;
+  line-height: 34px;
+  border-radius: 45px;
+  display: inline-block;
+  text-align: center;
+  border: none;
+  transition: all 0.5s;
+}
+li a.search-search:hover {
+  background: #189a46;
+  color: #fff;
+}
+li.nav-item {
+  padding: 0 12px;
+}
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+}
+.navbar-expand-lg .navbar-nav .nav-item.active .nav-link {
+  color: #189a46;
+}
+.navbar-expand-lg .navbar-nav .nav-link {
+  font-size: 1.2em;
+  font-weight: 400;
+  color: #000c04;
+  position: relative;
+  transition: all 0.5s;
+}
+.theme-switch {
+  display: inline-block;
+  width: 60px;
+  position: relative;
+  margin: 0;
+}
+.mode-container {
+  width: 24px;
+  height: 24px;
+  padding: 3px 0;
+  margin-left: 20px;
+}
+.mode-container i.gg-sun {
+  display: none;
+}
+/* responsive HEADER */
+@media only screen and (max-width: 991px) {
+  .navbar-toggler-icon.fa {
+    line-height: 1.2em;
+    color: #fff;
+    line-height: 34px;
+    background-color: #189a46;
+    border-radius: 5px;
+  }
+  .navbar-nav{
+    text-align: center;
+    width: 100%;
+    padding: 20px 0;
+    color: #404040;
+    background: #fff;
+  }
+  header.main-header{
+    height: auto;
+    padding: 15px 0;
+  }
+  .navbar-expand-lg .navbar-nav .nav-item.HeaderSearch{
+    text-align: left;
+  }
+  a.nav-link:hover::before {
+  width: 0;
+}
+}
+
 /* BANNER */
 #carouselPoochCaptions .carousel-caption {
   transform: translate(5%, -40%);
@@ -334,6 +399,14 @@ li.nav-item {
   margin: 0 auto;
   max-width: 700px;
 }
+
+/* responsive ABOUT */
+@media (max-width: 600px) {
+  .nd__title {
+    font-size: 32px;
+    line-height: 38px;
+  }
+}
 /* SERVICE */
 #service {
   background: rgba(147, 107, 232, 0.05);
@@ -392,6 +465,16 @@ li.nav-item {
   margin-right: 12px;
   display: inline-block;
 }
+.offer__text {
+  align-self: center;
+}
+/* responsive OFFER */
+@media (min-width: 992px) {
+  .col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
 
 /* NUMBER */
 .number {
@@ -417,6 +500,28 @@ li.nav-item {
 .number__info {
   text-align: center;
 }
+/* Responsive NUMBER */
+@media (max-width: 992px) {
+  .number__info p {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  .number__info h4 {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 737px) {
+  .number__info p {
+    font-size: 35px;
+    line-height: 38px;
+    margin-top: 20px;
+  }
+  .number__info h4 {
+    font-size: 17px;
+  }
+}
+
 /* PACKAGES */
 .package {
   background: rgba(147, 107, 232, 0.05);
@@ -711,8 +816,9 @@ p.indentity {
 .slick-dots li button:hover::before {
   color: transparent;
 }
-.slick-list {
-  padding-right: -20px;
+.slick-slider .slick-list {
+  /* padding-right: -20px; */
+  gap: 20px;
 }
 /* FORM POOCH  */
 .form__pooch .subscribe {
@@ -736,18 +842,18 @@ p.indentity {
   padding: 15px 35px;
 }
 /* FORM POOCH RESPONSIVE */
-@media only screen and (max-width: 667px){
+@media only screen and (max-width: 667px) {
   .form__pooch .subscribe__form .btn {
     flex-basis: 100%;
     display: block;
     width: 100%;
     margin-top: 16px;
-}
-.nd__title{
-  font-size: 32px;
-  line-height: 38px;
-  color: #ddd;
-}
+  }
+  .nd__title {
+    font-size: 32px;
+    line-height: 38px;
+    color: #ddd;
+  }
 }
 
 /* FOOTER */
