--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,24 @@ ul li {
 #switchToggle .gg-moon {
   display: block;
 }
+h3.nd__title{
+  color: #000c04;
+}
 /* DARK THEME */
 .dark#myBody {
-  background-color: black;
+  background-color: #000000;
+}
+.dark#myBody .main-header, .dark#myBody .navbar-collapse#navbarSupportedPooch{
+  background: #121212;
+}
+.dark#myBody .nav-item a.nav-link{
+  color: #fff;
+}
+.dark#myBody .nav-item a.nav-link:hover{
+  color: #189a46;
+}
+.dark#myBody .nav-item.active a.nav-link{
+  color: #189a46;
 }
 .dark #switchToggle .gg-moon {
   display: none;
@@ -150,8 +165,33 @@ ul li {
   display: block;
   color: white;
 }
+.dark .navbar-nav{
+  background: #121212;
+}
 .dark .nav-fixed {
   background: black;
+}
+
+.dark .grid__service .area__box{
+  background: #151515;
+}
+.dark .grid__service .area__box:hover{
+  background: #222;
+}
+.dark .area__box h4 a {
+  color: #ddd;
+}
+.dark .area__box p {
+  color: #afafaf;
+}
+.dark .package {
+    background: #222;
+}
+.dark .package__main .package__body, .dark .package__stand .package__bottom {
+  background: #151515;
+}
+.dark .package__main .package__top h6{
+  color: #ddd;
 }
 .dark h3.nd__title {
   color: #ddd;
@@ -168,7 +208,30 @@ ul li {
 .dark #service {
   background: #222;
 }
-/* responsive */
+.dark a.read{
+  color: #fff;
+}
+.dark a.read:hover{
+  color: #189a46;
+}
+.dark .form__pooch{
+  background: #121212;
+}
+
+/* RESPONSIVE */
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
@@ -176,6 +239,7 @@ ul li {
     margin-right: auto;
   }
 }
+
 @media (min-width: 1200px) {
   .container {
     max-width: 1140px;
@@ -197,10 +261,41 @@ ul li {
   }
 }
 
+
+@media (max-width: 1080px) {
+  .nd__title {
+    font-size: 35px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 600px) {
+  .nd__title {
+    font-size: 32px;
+    line-height: 38px;
+  }
+}
+
+@media (max-width: 378px) {
+  .nd__title {
+    font-size: 27px;
+    line-height: 32px;
+  }
+}
+
+@media (max-width: 375px) {
+
+  .btn-white,
+  .button__style {
+    padding: 12px 30px;
+  }
+
+}
+
 /* HEADER */
 header {
   position: fixed;
-  z-index: 100;
+  z-index: 9999;
   width: 100%;
 }
 header.nav-fixed {
@@ -265,11 +360,12 @@ li.nav-item {
   position: relative;
   transition: all 0.5s;
 }
-.theme-switch {
+.theme-switch-wrapper {
   display: inline-block;
   width: 60px;
   position: relative;
   margin: 0;
+  
 }
 .mode-container {
   width: 24px;
@@ -281,6 +377,94 @@ li.nav-item {
   display: none;
 }
 /* responsive HEADER */
+@media only screen and (max-width: 1440px) {
+  .navbar-expand-lg .navbar-nav .nav-item {
+    padding: 0 10px;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .navbar .navbar-brand img {
+    max-width: 109px;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .mode-container{
+    position: relative;
+    width: 60px;
+    padding: 20px 0;
+    width: calc(100% - 20px);
+  }
+  .mobile-position {
+    position: absolute;
+    right: 45px;
+    top: 13px;
+    transform: translateX(-50%);
+  }
+  a.dropdown-item {
+    width: auto;
+  }
+
+  .navbar .navbar-brand img {
+    max-width: 140px;
+  }
+
+  .navbar-toggler {
+    border: 0 none;
+    font-size: 22px;
+  }
+  .navbar-nav {
+    text-align: center;
+    width: 100%;
+    padding: 20px 0;
+  }
+
+  .navbar-nav:last-child {
+    border: 0;
+  }
+
+  .navbar-expand-lg .navbar-nav .nav-item {
+    padding: 0;
+  }
+
+  .navbar-expand-lg .navbar-nav.li {
+    padding-bottom: 10px;
+  }
+
+  .navbar-nav .dropdown-menu {
+    text-align: center;
+    background-color: #fff;
+    border-radius: 10px;
+  }
+
+  .navbar-expand-lg .navbar-nav .nav-item .nav-link.active::before {
+    bottom: 0;
+  }
+
+  .navbar-expand-lg .navbar-nav .nav-link {
+    display: inline-block;
+    padding: 6px 0;
+    text-align: center;
+  }
+
+  header.main-header {
+    height: auto;
+    padding: 15px 0;
+  }
+
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    transform: translateX(0px);
+    border: 1px solid #ddd;
+  }
+
+  header.nav-fixed {
+    height: auto;
+    padding: 10px 0;
+  }
+
+}
+
 @media only screen and (max-width: 991px) {
   .navbar-toggler-icon.fa {
     line-height: 1.2em;
@@ -298,7 +482,7 @@ li.nav-item {
   }
   header.main-header{
     height: auto;
-    padding: 15px 0;
+    padding: 0;
   }
   .navbar-expand-lg .navbar-nav .nav-item.HeaderSearch{
     text-align: left;
@@ -308,9 +492,56 @@ li.nav-item {
 }
 }
 
+@media only screen and (max-width:800px) {
+  .mobile-position {
+    position: absolute;
+    right: 40px;
+    top: 10px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .navbar-brand img {
+    max-width: 200px;
+  }
+
+  .navbar .navbar-brand {
+    font-size: 30px;
+  }
+
+  .mobile-position {
+    top: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg {
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+  }
+
+  .navbar-expand-lg .navbar-nav {
+    flex-direction: row;
+  }
+
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    position: absolute;
+  }
+
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
+  .navbar-expand-lg .navbar-collapse {
+    display: flex;
+    flex-basis: auto;
+  }
+
+}
+
 /* BANNER */
 #carouselPoochCaptions .carousel-caption {
-  transform: translate(5%, -40%);
+  transform: translate(-5%, -40%);
 }
 .carousel-inner .banner-infor-bg {
   max-width: 700px;
@@ -327,6 +558,7 @@ li.nav-item {
   background: url(../image/banner2.jpg);
   background-size: cover;
   height: 100vh;
+  background-position: top;
 }
 .carousel .banner__view {
   position: relative;
@@ -392,6 +624,69 @@ li.nav-item {
   text-transform: capitalize;
   font-size: 1.2em;
 }
+/* responsive BANNER */
+@media (max-width:1200px) {
+  .carousel.slide .banner-infor-bg h5 {
+    font-size: 52px;
+    line-height: 62px;
+  }
+
+  .carousel.slide .banner-infor-bg p {
+    font-size: 15px;
+  }
+}
+@media (max-width: 992px) {
+  .carousel.slide .banner-infor-bg h5 {
+    font-size: 50px;
+    line-height: 55px;
+  }
+  #carouselPoochCaptions .carousel-caption{
+    transform: translate(5%,-15%);
+  }
+  
+}
+
+@media (max-width: 768px) {
+  .container{
+    max-width: 720px;
+  }
+  .carousel.slide .banner-infor-bg p {
+    font-size: 16px;
+  }
+
+  .carousel.slide .banner__view {
+    min-height: 580px;
+  }
+  .carousel .banner__view{
+    height: 95vh;
+  }
+}
+
+@media (max-width:600px) {
+  .carousel.slide .banner__view {
+    min-height: 500px;
+  }
+  .carousel .banner__view{
+    height: 80vh;
+  }
+}
+
+@media (max-width:480px) {
+  .carousel.slide .banner-infor-bg h5 {
+    font-size: 32px;
+    line-height: 42px;
+  }
+
+  .carousel.slide .banner__view {
+    min-height: 480px;
+  }
+}
+
+@media (max-width:440px) {
+  .carousel.slide .banner__view {
+    min-height: 440px;
+  }
+}
 
 /* ABOUT */
 .titlePooch.align-items-center {
@@ -430,6 +725,10 @@ li.nav-item {
   display: block;
   text-decoration: none;
   line-height: 1.2;
+  transition: all .5s;
+}
+.area__box h4 a:hover{
+  color: #189a46;
 }
 .area__box p {
   font-size: 1.2rem;
@@ -441,6 +740,7 @@ li.nav-item {
 .grid__service .area__box:hover {
   background: rgba(147, 107, 232, 0.05);
 }
+
 /* OFFER */
 .offer__img img {
   border-radius: 10px;
@@ -519,6 +819,15 @@ li.nav-item {
   }
   .number__info h4 {
     font-size: 17px;
+  }
+  .number__info{
+    padding: 0 5px;
+  }
+}
+
+@media (max-width: 415px) {
+  .number__info span.fa {
+    font-size: 2em;
   }
 }
 
@@ -629,11 +938,100 @@ li.nav-item {
 }
 .package__stand.col-lg-4.active {
   box-shadow: 0 10px 30px 0 rgba(17, 17, 17, 0.09);
-  z-index: 10;
+  z-index: 100;
 }
 .package__main .package__align {
   align-self: center;
 }
+/* responsive PACKAGE */
+@media (max-width: 1366px) {
+  .package__main .package__sec.row {
+    width: 90%;
+  }
+}
+
+@media (max-width: 991px) {
+.package__main .package__sec.row {
+  width: 60%;
+  margin:0 auto; }
+}
+
+@media (max-width: 800px) {
+  .package__main .package__sec.row{
+    margin: 50px auto 0;
+  }
+
+  .package .package__free {
+    border: 1px solid var(--border-light);
+  }
+
+  .package .package__pro {
+    border: 1px solid var(--border-light);
+  }
+
+  .package__main .package__sec.row {
+    width: 60%;
+  }
+
+}
+
+@media (max-width: 768px) {
+  .package__main .package__sec.row {
+    width: 75%;
+  }
+
+  .package .heading h3 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 600px) {
+  .package p.pric-foot {
+    margin-top: 25px;
+  }
+}
+
+@media (max-width: 568px) {
+  .package .pricing-7-sec h2 {
+    margin-bottom: 1.3em;
+  }
+
+  .package .package__sec {
+    grid-gap: 20px;
+    margin: 30px auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .package .package__sec {
+    width: 80%;
+  }
+}
+
+@media (max-width: 415px) {
+  .package .package__sec {
+    width: 100%;
+  }
+
+  .package .copy-right p {
+    font-size: 16px;
+  }
+
+  .package .heading h3 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+}
+
+@media (max-width: 375px) {
+  .package .heading h3 {
+    font-size: 28px;
+    line-height: 33px;
+  }
+}
+
+
 /* Video Pooch Popup */
 .video__pooch .video__content {
   padding: 2rem 0;
@@ -718,6 +1116,26 @@ div#my-popup iframe {
 .my-mfp-zoom-in.mfp-removing.mfp-bg {
   opacity: 0;
 }
+/* ****responsive VIDEO POOCH */
+@media (max-width: 800px) {
+  .video__pooch .middle-section h2 {
+    font-size: 40px;
+    line-height: 50px;
+  }
+}
+
+@media (max-width: 667px) {
+  .video__pooch .middle-section h2 {
+    font-size: 32px !important;
+    line-height: 42px;
+  }
+
+  .video__pooch .play__view {
+    left: 0;
+    right: 0;
+    top: calc(50% - 28px);
+  }
+}
 
 /* TESTIMONALS */
 .test {
@@ -752,6 +1170,9 @@ div#my-popup iframe {
   border: none;
   border-radius: 10px;
   box-shadow: 0 25px 98px 0 rgba(19, 19, 19, 0.03);
+}
+.test .test__width .test__stage__outer{
+  overflow: hidden;
 }
 p.indentity {
   font-size: 17px;
@@ -816,10 +1237,8 @@ p.indentity {
 .slick-dots li button:hover::before {
   color: transparent;
 }
-.slick-slider .slick-list {
-  /* padding-right: -20px; */
-  gap: 20px;
-}
+
+/* ****responsive TESTIMONALS */
 /* FORM POOCH  */
 .form__pooch .subscribe {
   max-width: 650px;
@@ -909,11 +1328,39 @@ p.indentity {
   border-top: 1px solid rgba(103, 99, 99, 0.14);
 }
 /* FOOTER RESPONSIVE */
-@media screen and (max-width: 600px) {
-  .footer__pooch .footer__top {
+@media (max-width: 768px) {
+  .footer__pooch .grid-col-4 {
+    grid-template-columns: 1fr 1fr;
+  }
+  .row{
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer__pooch .footer {
     grid-gap: 20px;
   }
 }
+
+@media (max-width: 550px) {
+  .footer__pooch ul.social__icon li {
+    margin: 0 5px;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer__pooch .footer {
+    grid-gap: 40px;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .footer__pooch ul.social__icon {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+}
+
 
 /* BACK TO TOP  */
 .backToTop {
